Fix to home width on mobile.

--- a/assets/style.css
+++ b/assets/style.css
@@ -69,7 +69,7 @@ body {
     z-index: initial !important;
 }
 
-.hero-body .dropdown-menu {
+.hero .container, .hero-body .dropdown-menu {
     width: 100%;
 }
 
